Next release

- Fixed the use of setup.py without setuptools.  Thanks Chris Withers.

- Fixed type coercion of the transaction extension field.  This fixes
  an issue with converting databases.  Thanks to Kevin Smith for
  discovering this.


RelStorage 1.0.1

- The speedtest script failed if run on a test database that has no tables.
  Now the script creates the tables if needed.  Thanks to Flavio Coelho
  for discovering this.

- Reworked the auto-reconnect logic so that applications never see
  temporary database disconnects if possible.  Thanks to Rigel Di Scala
  for pointing out this issue.

- Improved the log messages explaining database connection failures.

- Moved poll_invalidations to the common adapter base class, reducing the
  amount of code to maintain.


RelStorage 1.0

- Added a utility for converting between storages called zodbconvert.


RelStorage 1.0c1

- The previous fix for non-ASCII characters was incorrect.  Now transaction
  metadata is stored as raw bytes.  A schema migration is required; see
  notes/migrate-1.0-beta.txt.

- Integrated setuptools and made an egg.


RelStorage 1.0 beta

- Renamed to reflect expanding database support.

- Added support for Oracle 10g.

- Major overhaul with many scalability and reliability improvements,
  particularly in the area of packing.

- Moved to svn.zope.org and switched to ZPL 2.1.

- Made two-phase commit optional in both Oracle and PostgreSQL.  They
  both use commit_lock in such a way that the commit is not likely to
  fail in the second phase.

- Switched most database transaction isolation levels from serializable
  to read committed.  It turns out that commit_lock already provides
  the serializability guarantees we need, so it is safe to take advantage
  of the potential speed gains.  The one major exception is the load
  connection, which requires an unchanging view of the database.

- Stored objects are now buffered in a database table rather than a file.
